# duckdb-nb-export

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: assumption-watch.yml  ci.yml  pip-audit-watch.yml  publish.yml  windows-verify.yml
docs/: release-procedure.md
docs/adr/: duckdb-notebook-html-export-adr.md
docs/design/: duckdb-notebook-html-export-design.md
docs/tests/: duckdb-notebook-html-export-test-design.md
scripts/: regenerate_storage_version_fixture.py  regenerate_ui_db_fixtures.py  verify_duckdb_assumptions.py  verify_windows_lock_copy.py
src/duckdb_ui_notebook_export/: __init__.py  _logging.py  cli.py  exceptions.py  executor.py  models.py  reader.py  renderer.py
src/duckdb_ui_notebook_export/models/: __init__.py  notebook.py  stored.py
tests/: __init__.py  conftest.py  test_assumptions.py  test_cli.py  test_e2e.py  test_executor.py  test_integration.py  test_logging.py  test_reader.py  test_renderer.py
tests/fixtures/storage_version/: ui_newer_storage.db
tests/fixtures/ui_db/: ui.db  ui.db.wal
tests/golden/: e2e-001-successful-cells.html  e2e-002-non-abort-error.html  e2e-003-abort-error.html  e2e-004-large-result-limit.html  e2e-005-nested-and-null-values.html  e2e-007-create-secret.html  e2e-008-transaction-statements.html
tests/helpers/: __init__.py  synthetic_ui_db.py
