[project]
name = "duckdb-nb-export"
dynamic = ["version"]
description = "Export DuckDB UI notebooks to standalone static HTML, re-executing cells against the target database."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "b-trout" },
]
keywords = [
    "duckdb",
    "duckdb-ui",
    "html-export",
    "notebook",
    "static-html",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]
dependencies = [
    "duckdb>=1.5.4",
    "jinja2>=3",
    "pydantic>=2",
    "pygments>=2.19",
    "structlog>=24",
]

[project.scripts]
duckdb-nb-export = "duckdb_ui_notebook_export.cli:main"

[project.urls]
Homepage = "https://github.com/b-trout/duckdb-nb-export"
Repository = "https://github.com/b-trout/duckdb-nb-export"
Issues = "https://github.com/b-trout/duckdb-nb-export/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "S",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "assumptions: permanent tests guarding design assumptions (DuckDB behavior / DuckDB UI unofficial schema)",
    "integration: multi-layer tests using real files and processes",
    "e2e: golden HTML tests driving the real CLI",
]

[tool.hatch.version]
path = "src/duckdb_ui_notebook_export/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/duckdb_ui_notebook_export"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.poe.tasks]
format = "pre-commit run ruff-format --all-files"
lint = "pre-commit run ruff-check --all-files"
typecheck = "pre-commit run ty --all-files"
audit = "pre-commit run pip-audit --all-files"

[tool.poe.tasks.check]
sequence = [
    { ref = "format" },
    { ref = "lint" },
    { ref = "typecheck" },
    { ref = "audit" },
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.1",
    "poethepoet>=0.47.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]
